<resources>
    <string name="app_name">Mis Tensiones</string>
    <string name="logologin">LogoLogin</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="reg_strese">Regístrese</string>
    <string name="no_tiene_cuenta">¿No tiene cuenta?</string>
    <string name="logoapp">logoApp</string>
    <string name="acceder">Acceder</string>
    <string name="datos_iniciales">DATOS INICIALES</string>
    <string name="modificar_datos_iniciales">MODIFICACIÓN DE DATOS INICIALES</string>
    <string name="continuar">CONTINUAR</string>
    <string name="modificar_datos">MODIFICAR DATOS</string>
    <string name="titulo">titulo</string>
    <string name="nombre">Nombre</string>
    <string name="altura_cm">Altura (cm.)</string>
    <string name="edad">Edad</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="pantalla_de_registro">PANTALLA DE REGISTRO</string>
    <string name="registrarse">Registrarse</string>
    <string name="titulo1">titulo</string>
    <string name="e_mail1">E-Mail</string>
    <string name="inicio">INICIO</string>
    <string name="salir">Salir</string>
    <string name="salir1">Salir</string>
    <string name="nombrelogueado">NombreLogueado</string>
    <string name="imagen_a_adir_registro">Imagen Añadir Registro</string>
    <string name="imagen_buscar_registro">Imagen Buscar Registro</string>
    <string name="imagen_modificar_registro">Imagen Modificar Registro</string>
    <string name="imagen_modificar_datos_inicio">Imagen modificar Datos Inicio</string>
    <string name="email_registrado">Email Registrado</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sist_lica_mmhg">Sistólica mmHg</string>
    <string name="diast_lica_mmhg">Diastólica mmHg</string>
    <string name="oxigenacion">O2 %</string>
    <string name="peso_kg">Peso Kg</string>
    <string name="editar_registros">EDITAR/ELIMINAR REGISTROS</string>
    <string name="todo">TODO</string>
    <string name="seleccione_fecha">Seleccione fecha:</string>
    <string name="boton_eliminar">boton_eliminar</string>
    <string name="string_boton_eliminar" />
    <string name="botonvolver">botonVolver</string>
    <string name="glucemia_mg_dl">Glucemia mg/dl</string>
    <string name="observaciones">Observaciones</string>
    <string name="botonfiltrar">BotonFiltrar</string>
    <string name="fecha_inicio">Fecha Inicio:</string>
    <string name="fecha_fin">Fecha Fin:</string>
    <string name="historial">HISTORIAL</string>
    <string name="text">Text</string>
    <string name="textview">TextView</string>
    <string name="grafica">GRAFICA</string>
    <string name="ok">OK</string>
    <string name="precaucion_medico">PRECAUCIÓN. CONTACTE CON SU MÉDICO</string>
    <string name="precaucion_imc">PRECAUCIÓN. IMC ALTO</string>
    <string name="opciones">OPCIONES</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="mensaje_warning_alimentos">"Hemos detectado que las 3 últimas tensiones introducidas, están por encima de lo normal con el consiguiente riesgo cardiovascular para su salud. A continuación le detallamos un par de alimentos con cualidades para mejorar la salud: \n"</string>
    <string name="mensaje_warning_ejercicios">"Su IMC indica que tiene sobrepeso. Le sugerimos que realice deporte regularmente. Aqui tiene alguna sugerencia de ejercicio: \n"</string>
    <string name= "mensaje_alimentos"></string>
    <string name="alertas_por_imc_alto">Alertas por IMC Alto</string>
    <string name="alertas_por_tension_alta">Alertas por Tension Alta</string>
    <string name="tensi_n">Tensión</string>
    <string name="tensiones_mmhg">Tensiones mmHg</string>
    <string name="notificaciones_push">Notificaciones Push</string>
    <string name="ultima_entrada">ULTIMA ENTRADA</string>
    <string name="hora1">Hora:</string>
    <string name="imc">IMC</string>
    <string name="imc1">imc</string>
    <string name="informe">INFORME PDF</string>
    <string name="olvid_su_contrase_a_rellene_su_mail_y_p_lseme">Olvidó su contraseña. Rellene su mail y púlseme.</string>
</resources>