<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_titulo"
            android:layout_width="269dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/titulo"
            app:srcCompat="@mipmap/titulo" />

        <TextView
            android:id="@+id/text_view_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/datos_iniciales"
            android:textAlignment="center"
            android:textColor="#350D0D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edad"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_text_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/altura_cm"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/radio_button_group_sexo"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_marginTop="15dp">

            <RadioButton
                android:id="@+id/radio_button_hombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hombre" />

            <RadioButton
                android:id="@+id/radio_button_mujer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/mujer" />
        </RadioGroup>

        <Button
            android:id="@+id/button_registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/ok" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>