<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_titulo"
            android:layout_width="269dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:contentDescription="@string/titulo"
            app:srcCompat="@mipmap/titulo" />

        <TextView
            android:id="@+id/text_view_inicio"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/inicio"
            android:textAlignment="center"
            android:textColor="#350D0D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNombreLogueado"
                android:layout_width="281dp"
                android:layout_height="37dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/nombrelogueado"
                app:layout_constraintTop_toBottomOf="@+id/text_view_inicio" />

            <ImageButton
                android:id="@+id/imageButtonModificarDatosInicio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/imagen_modificar_datos_inicio"
                android:foregroundGravity="center_vertical|center"
                app:srcCompat="@mipmap/ic_account_edit_outline_grey600_18dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutEntradaDatos"
            android:layout_width="match_parent"
            android:layout_height="445dp"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/imagen_a_adir_registro"
                app:srcCompat="@mipmap/ic_text_box_plus_outline_grey600_48dp" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/imagen_modificar_registro"
                app:srcCompat="@mipmap/ic_lead_pencil_grey600_48dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/salir"
                app:srcCompat="@mipmap/ic_exit_run_grey600_48dp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/imagen_buscar_registro"
                app:srcCompat="@mipmap/ic_text_box_search_outline_grey600_48dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>