<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".graficas.GraficaTension">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_titulo2"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:contentDescription="@string/titulo"
            app:srcCompat="@mipmap/titulo" />

        <TextView
            android:id="@+id/text_view_historial2"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/grafica"
            android:textAlignment="center"
            android:textColor="#350D0D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewNombreLogueadoGrafica"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/nombrelogueado"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_historial" />

        <LinearLayout
            android:id="@+id/layoutFechaHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/fecha_inicio"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/editTextDateGraficaInicio"
                android:layout_width="146dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/fecha"
                android:importantForAutofill="no"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/fecha_fin"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/editTextDateGraficaFinal"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/fecha"
                android:importantForAutofill="no"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageViewFiltrarGrafica"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/botonfiltrar"
                app:srcCompat="@mipmap/ic_text_box_search_outline_grey600_48dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioButonGroupGraficas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonTensiones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Tensiones mmHg"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButtonPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peso_kg"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButtonOxigeno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/oxigenacion"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButtonGlucosa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/glucemia_mg_dl"
                    android:textSize="12sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="506dp"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/graficatension"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonVolverGrafica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/botonvolver"
                app:srcCompat="@mipmap/ic_arrow_u_left_top_grey600_48dp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>